--- a/index.html
+++ b/index.html
@@ -1,53 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    />
+    <link rel="stylesheet" href="assets/styles/normalize.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
+    <title>Page of architects</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-    rel="stylesheet" />
-  />
-  <link rel="stylesheet" href="assets/styles/normalize.css" />
-  <link rel="stylesheet" href="assets/styles/style.css" />
-  <title>Page of architects</title>
-</head>
-
-<body>
-  <div class="container">
-    <header></header>
-    <main>
-      <!-- раздел, где project lorum -->
-      <section></section>
-      <!-- раздел, где about -->
-      <section></section>
-      <!-- раздел, где main focus -->
-      <section></section>
-      <!-- our projects -->
-      <section></section>
-      <!-- contact us -->
-      <section class="contacts">
-        <h2 class="contacts__title">Contact Us</h2>
-        <div class="contacts__inner">
-          <form class="contacts__form" action="">
-            <input type="text" class="contacts__form-name" placeholder="Name">
-            <input type="number" class="contacts__form-phone" placeholder="Phone Number*">
-            <input type="email" class="contacts__form-email" placeholder="E-mail*">
-            <input type="text" class="contacts__form-interested" placeholder="Interested In">
-            <textarea class="contacts__form-formarea" cols="30" rows="10" placeholder="Message*"></textarea>
-          </form>
-          <div class="contacts__img">
-            <img src="../Page-of-architects/assets/images/contacts_men.png" alt="form photo">
+  <body>
+    <div class="container">
+      <header></header>
+      <main>
+        <!-- раздел, где project lorum -->
+        <section></section>
+        <!-- раздел, где about -->
+        <section></section>
+        <!-- раздел, где main focus -->
+        <section class="main-focus">
+          <h2 class="main-focus__title">Main Focus/Mission Statement</h2>
+          <div class="main-focus__content main-focus__content_wrapper">
+            <img
+              class="main-focus__image main-focus__image_one"
+              src="assets/images/pictures/one.png"
+              alt="mission one"
+            />
+            <p class="main-focus__content main-focus__content_primary-mission">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              efficitur, lectus et facilisis placerat.
+            </p>
+            <img
+              class="main-focus__image main-focus__image_two"
+              src="assets/images/pictures/two.png"
+              alt="mission two"
+            />
+            <p
+              class="main-focus__content main-focus__content_secondary-mission"
+            >
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              efficitur, lectus et facilisis placerat, magna mauris porttitor
+              tortor, a auctor est felis ut nisl.
+            </p>
           </div>
-        </div>
-        <a href="#!" class="contacts__link">Send Email</a>
-      </section>
-    </main>
-    <footer></footer>
-  </div>
-</body>
-
+        </section>
+        <!-- our projects -->
+        <section></section>
+        <!-- contact us -->
+        <section class="contacts">
+          <h2 class="contacts__title">Contact Us</h2>
+          <div class="contacts__inner">
+            <form class="contacts__form" action="">
+              <input
+                type="text"
+                class="contacts__form-name"
+                placeholder="Name"
+              />
+              <input
+                type="number"
+                class="contacts__form-phone"
+                placeholder="Phone Number*"
+              />
+              <input
+                type="email"
+                class="contacts__form-email"
+                placeholder="E-mail*"
+              />
+              <input
+                type="text"
+                class="contacts__form-interested"
+                placeholder="Interested In"
+              />
+              <textarea
+                class="contacts__form-formarea"
+                cols="30"
+                rows="10"
+                placeholder="Message*"
+              ></textarea>
+            </form>
+            <div class="contacts__img">
+              <img
+                src="../Page-of-architects/assets/images/contacts_men.png"
+                alt="form photo"
+              />
+            </div>
+          </div>
+          <a href="#!" class="contacts__link">Send Email</a>
+        </section>
+      </main>
+      <footer></footer>
+    </div>
+  </body>
 </html>
