header/project_lorum

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
-  />
+  
   <link rel="stylesheet" href="assets/styles/normalize.css" />
   <link rel="stylesheet" href="assets/styles/style.css" />
   <title>Page of architects</title>
@@ -18,10 +18,38 @@
 
 <body>
   <div class="container">
-    <header></header>
+    <header class="header">
+      <div>
+        <img src="assets/images/logo__header.png" class="header_logo" alt="logo_photo">
+      </div>
+      <nav class="nav">
+        <div class="nav__main">main</div>
+        <div class="nav__gallery">gallery</div>
+        <div class="nav__projects">projects</div>
+        <div class="nav__certifications">certifications</div>
+        <div class="nav__contacts">contacts</div>
+      </nav>
+      </div>
+    </header>
     <main>
       <!-- раздел, где project lorum -->
-      <section></section>
+      <section class="project-lorum">
+        <div class="project-lorum__left_path">
+        <h2 class="project-lorum__title">project lorum</h2>
+        <div class="project-lorum__button__left">
+          <img src="assets/images/button_left.png" alt="button left">
+        </div>
+        <div class="project-lorum__button__right">
+          <img src="assets/images/button_right.png" alt="button right">
+        </div>
+        <div class="project-lorum__slide__numbers">
+          <img src="assets/images/slide-numbers.png" alt="slide numbers">
+        </div>
+      </div>
+      <div class="project-lorum__right_path">
+        <img src="assets/images/main_building_foto1.png" class="building__foto" alt="building foto">
+      </div>
+      </section>
       <!-- раздел, где about -->
       <section></section>
       <!-- раздел, где main focus -->
