--- a/index.html
+++ b/index.html
@@ -51,22 +51,24 @@
       </div>
     </section>
     <!-- раздел, где about -->
-    <section></section>
+    <!-- <section></section>
     <!-- раздел, где main focus -->
     <section class="main-focus">
-      <h2 class="main-focus__title">Main Focus/Mission Statement</h2>
-      <div class="main-focus__content main-focus__content_wrapper">
-        <img class="main-focus__image main-focus__image_one" src="assets/images/pictures/one.png" alt="mission one" />
-        <p class="main-focus__content main-focus__content_primary-mission">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-          efficitur, lectus et facilisis placerat.
-        </p>
-        <img class="main-focus__image main-focus__image_two" src="assets/images/pictures/two.png" alt="mission two" />
-        <p class="main-focus__content main-focus__content_secondary-mission">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-          efficitur, lectus et facilisis placerat, magna mauris porttitor
-          tortor, a auctor est felis ut nisl.
-        </p>
+      <div class="container">
+        <h2 class="main-focus__title">Main Focus/Mission Statement</h2>
+        <div class="main-focus__content main-focus__content_wrapper">
+          <img class="main-focus__image main-focus__image_one" src="assets/images/pictures/one.png" alt="mission one" />
+          <p class="main-focus__content main-focus__content_primary-mission">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+            efficitur, lectus et facilisis placerat.
+          </p>
+          <img class="main-focus__image main-focus__image_two" src="assets/images/pictures/two.png" alt="mission two" />
+          <p class="main-focus__content main-focus__content_secondary-mission">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+            efficitur, lectus et facilisis placerat, magna mauris porttitor
+            tortor, a auctor est felis ut nisl.
+          </p>
+        </div>
       </div>
     </section>
     <!-- our projects -->
@@ -86,7 +88,7 @@
             </label>
 
             <label for="email1" class="placeinput">
-              <input required type="email" class="contacts__form-email" id="email1" />
+              <input required type="text" class="contacts__form-email" id="email1" />
               <span class="place_holder">E-mail<span>*</span></span>
             </label>
 
@@ -96,7 +98,6 @@
               <textarea required class="contacts__form-textarea" cols="30" rows="10" id="textarea"></textarea>
               <span class="place_holder">Message<span>*</span></span>
             </label>
-
           </form>
 
           <div class="contacts__img">
@@ -107,7 +108,6 @@
       </div>
     </section>
   </main>
-  </div>
   <footer class="footer">
     <div class="footer__top">
       <div class="container">
@@ -210,7 +210,6 @@
       <p class="footer__bottom-text">© 2021 All Rights Reserved</p>
     </div>
   </footer>
-
 </body>
 
 </html>
