--- a/index.html
+++ b/index.html
@@ -35,21 +35,41 @@
     <!-- раздел, где project lorum -->
     <section class="project-lorum">
       <div class="project-lorum__left_path">
-        <h2 class="project">project</h2>
-        <h3 class="lorum">lorum</h3>
-        <div class="arrows">arrows</div>
-        <div class="slide_numbers">slide_numbers</div>
+        <h2 class="project">PROJECT</h2>
+        <h3 class="lorum">Lorum</h3>
+        <div class="arrows">
+          <div class="arrow_left"><a href="#"><img src="assets/images/arrow_left.png" alt="arrow_left"></a></div>
+          <div class="arrow_right"><a href="#"><img src="assets/images/arrow_right.png" alt="arrow_right"></a></div>
+        </div>
+        <div class="slide_numbers">
+          <div class="slide_number_01">01</div>
+          <div class="slash">/</div>
+          <div class="slide_number_02">02</div>
+        </div>
       </div>
-        <div class="project-lorum__right_path"><img src="assets/images/main_building_foto1.png" height="829px" width="770px" alt=""></div>
+        <div class="button_view_project">
+          <div class="building_foto1"><img src="assets/images/main_building_foto1.png" alt="building_foto1"></div>
+          <div class="button"><a href="#"><img src="assets/images/button_view_project.png" alt=""></a></div>
+        </div>
     </section>
     <!-- раздел, где about -->
+    <section class="about">
+      <img src="assets/images/rectangle_1.png" class="rectangle_foto_1" alt="rectangle_foto_1">
+      <img src="assets/images/rectangle_2.png" class="rectangle_foto_2" alt="rectangle_foto_2">
+      <img src="assets/images/rectangle_3.png" class="rectangle_foto_3" alt="rectangle_foto_3">
+      <div class="about_textarea">
+        <h2 class="about_h2">About</h2>
+        <p class="about_p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+        <div class="button_read_more"><a href="#"><img src="assets/images/button_read_more.png" alt="button_read_more"></a></div>
+      </div>
+    </section>
     <!-- <section-->
     <!-- раздел, где main focus -->
     <section class="main-focus">
       <div class="container">
         <h2 class="main-focus__title">Main Focus/Mission Statement</h2>
         <div class="main-focus__content main-focus__content_wrapper">
-          <img class="main-focus__image main-focus__image_one" src="assets/images/pictures/one.png" alt="mission one" />
+          <img src="assets/images/pictures/one.png" class="main-focus__image main-focus__image_one" alt="mission one" />
           <p class="main-focus__content main-focus__content_primary-mission">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
             efficitur, lectus et facilisis placerat.
