--- a/index.html
+++ b/index.html
@@ -70,41 +70,6 @@
       </div>
     </section>
     <!-- <section-->
-        <nav class="nav">
-          <div class="nav__main">
-            <a href="#main"
-              ><img src="assets/images/main_group.png" alt="main_group"
-            /></a>
-          </div>
-          <div class="nav__gallery"><a href="#gallery">gallery</a></div>
-          <div class="nav__projects"><a href="#projects">projects</a></div>
-          <div class="nav__certifications">
-            <a href="#certifications">certifications</a>
-          </div>
-          <div class="nav__contacts"><a href="#contacts">contacts</a></div>
-        </nav>
-      </header>
-    </div>
-    <main>
-      <!-- раздел, где project lorum -->
-      <section class="project-lorum">
-        <div class="project-lorum__left_path">
-          <h2 class="project">project</h2>
-          <h3 class="lorum">lorum</h3>
-          <div class="arrows">arrows</div>
-          <div class="slide_numbers">slide_numbers</div>
-        </div>
-        <div class="project-lorum__right_path">
-          <img
-            src="assets/images/main_building_foto1.png"
-            height="829px"
-            width="770px"
-            alt=""
-          />
-        </div>
-      </section>
-      <!-- раздел, где about -->
-      <!-- <section-->
       <!-- раздел, где main focus -->
       <section class="main-focus">
         <div class="container">
@@ -138,14 +103,14 @@
       <section class="our-projects">
         <div class="container">
           <h2 class="our-projects__title">Our projects</h2>
-          <div class="our-projects__content">
-            <img
+          <div class="our-projects__gallery">
+            <img class="our-projects__image-rectangle"
               src="assets/images/pictures/rectangle.png"
-              alt="retabgle-building"
-            /><img src="assets/images/pictures/building.png" alt="" /><img
-              src=""
-              alt=""
-            /><img src="" alt="" /><img src="" alt="" />
+              alt="retangle-building"
+            /><img class="our-projects__image-building" src="assets/images/pictures/building.png" alt="building" /><img class="our-projects__image-roof"
+              src="assets/images/pictures/roof.png"
+              alt="roof"
+            /><img class="our-projects__image-house" src="assets/images/pictures/house.png" alt="house" /><img clas="our-projects__image-bridge" src="assets/images/pictures/bridge.png" alt="bridge" />
           </div>
         </div>
       </section>
