--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   </div>
   <main>
     <!-- раздел, где project lorum -->
+    <div class="container">
     <section class="project-lorum">
       <div class="project-lorum__left_path">
         <h2 class="project">PROJECT</h2>
@@ -52,7 +53,9 @@
           <div class="button"><a href="#"><img src="assets/images/button_view_project.png" alt=""></a></div>
         </div>
     </section>
+  </div>
     <!-- раздел, где about -->
+    <div class="container">
     <section class="about">
       <img src="assets/images/rectangle_1.png" class="rectangle_foto_1" alt="rectangle_foto_1">
       <img src="assets/images/rectangle_2.png" class="rectangle_foto_2" alt="rectangle_foto_2">
@@ -63,6 +66,7 @@
         <div class="button_read_more"><a href="#"><img src="assets/images/button_read_more.png" alt="button_read_more"></a></div>
       </div>
     </section>
+  </div>
     <!-- <section-->
     <!-- раздел, где main focus -->
     <section class="main-focus">
