--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
   <div class="container">
     <header class="header">
+
       <div>
         <img src="assets/images/logo__header.png" class="header_logo" alt="logo_photo">
       </div>
@@ -33,7 +34,9 @@
   </div>
   <main>
     <!-- раздел, где project lorum -->
+
     <section class="project-lorum">
+
       <div class="project-lorum__left_path">
         <h2 class="project">PROJECT</h2>
         <h3 class="lorum">Lorum</h3>
@@ -47,22 +50,33 @@
           <div class="slide_number_02">02</div>
         </div>
       </div>
-        <div class="button_view_project">
-          <div class="building_foto1"><img src="assets/images/main_building_foto1.png" alt="building_foto1"></div>
-          <div class="button"><a href="#"><img src="assets/images/button_view_project.png" alt=""></a></div>
-        </div>
+      <div class="button_view_project">
+        <div class="building_foto1"><img src="assets/images/main_building_foto1.png" alt="building_foto1"></div>
+        <div class="button"><a href="#"><img src="assets/images/button_view_project.png" alt=""></a></div>
+      </div>
+
     </section>
+
     <!-- раздел, где about -->
+
     <section class="about">
+
       <img src="assets/images/rectangle_1.png" class="rectangle_foto_1" alt="rectangle_foto_1">
       <img src="assets/images/rectangle_2.png" class="rectangle_foto_2" alt="rectangle_foto_2">
       <img src="assets/images/rectangle_3.png" class="rectangle_foto_3" alt="rectangle_foto_3">
       <div class="about_textarea">
         <h2 class="about_h2">About</h2>
-        <p class="about_p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-        <div class="button_read_more"><a href="#"><img src="assets/images/button_read_more.png" alt="button_read_more"></a></div>
+        <p class="about_p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+          been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+          and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+          into
+          electronic typesetting, remaining essentially unchanged.</p>
+        <div class="button_read_more"><a href="#"><img src="assets/images/button_read_more.png"
+              alt="button_read_more"></a></div>
       </div>
+
     </section>
+
     <!-- <section-->
     <!-- раздел, где main focus -->
     <section class="main-focus">
