--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <header class="header">
       <div>
-        <img src="assets/images/logo__header.png" class="header_logo" alt="logo_photo">
+        <img src="assets/images/logo__header.png" class="header__logo" alt="logo_photo">
       </div>
       <nav class="nav">
         <div class="nav__main"><a href="#main"><img src="assets/images/main_group.png" alt="main_group"></a></div>
