--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="assets/styles/normalize.css" />
     <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/icon">
     <title>Page of architects</title>
   </head>
   <body>
