modify pur projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="assets/styles/normalize.css" />
     <link rel="stylesheet" href="assets/styles/style.css" />
-    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/icon">
+    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/icon" />
     <title>Page of architects</title>
   </head>
   <body>
@@ -153,25 +153,40 @@
           <h2 class="our-projects__title">Our projects</h2>
           <div class="our-projects__gallery">
             <img
-              class="our-projects__image-rectangle"
+              class=".our-projects__image-rectangle"
               src="assets/images/pictures/rectangle.png"
-              alt="retangle-building"
-            /><img
-              class="our-projects__image-building"
-              src="assets/images/pictures/building.png"
-              alt="building"
-            /><img
+              alt="rectangle-building"
+            />
+            <div>
+              <p class="our-projects__projects">Sample <br />project</p>
+              <a class="our-projects__view-more" href="#">View more</a>
+              <img
+                class="our-projects__arrow-first"
+                src="assets/images/pictures/arrow.png"
+                alt="arrow"
+              />
+            </div>
+            <img src="assets/images/pictures/building.png" alt="building" /><img
               class="our-projects__image-roof"
               src="assets/images/pictures/roof.png"
               alt="roof"
-            /><img
+            />
+            <img
               class="our-projects__image-house"
               src="assets/images/pictures/house.png"
               alt="house"
             /><img
-              clas="our-projects__image-bridge"
+              class="our-projects__image-bridge"
               src="assets/images/pictures/bridge.png"
               alt="bridge"
+            />
+            <button class="our-projects__button" type="submit">
+              All projects
+            </button>
+            <img
+              class="our-projects__arrow-second"
+              src="assets/images/pictures/arrow.png"
+              alt="arrow"
             />
           </div>
         </div>
