--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               ><img src="assets/images/main_group.png" alt="main_group"
             /></a>
           </div>
-          <div class="nav__gallery"><a href="#gallery">gallery</a></div>
+          <div class="nav__gallery"><a href="gallery_link" class="#gallery">gallery</a></div>
           <div class="nav__projects"><a href="#projects">projects</a></div>
           <div class="nav__certifications">
             <a href="#certifications">certifications</a>
@@ -44,8 +44,8 @@
       <div class="container">
         <section class="project-lorum">
           <div class="project-lorum__left_path">
-            <h2 class="project">PROJECT</h2>
-            <h3 class="lorum">Lorum</h3>
+            <h1 class="project">PROJECT</h1>
+            <h2 class="lorum">Lorum</h2>
             <div class="arrows">
               <div class="arrow_left">
                 <a href="#"
