--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
           </div>
           <div class="button">
             <a href="#"><img src="assets/images/button_view_project.png" alt="" /></a>
+            <div class="nav__gallery"><a href="gallery_link" class="#gallery">gallery</a></div>
+            <div class="nav__projects"><a href="#projects">projects</a></div>
+            <div class="nav__certifications">
+              <a href="#certifications">certifications</a>
+            </div>
           </div>
-        </div>
       </section>
     </div>
     <!-- раздел, где about -->
@@ -104,6 +108,33 @@
             tortor, a auctor est felis ut nisl.
           </p>
         </div>
+        <section class="project-lorum">
+          <div class="project-lorum__left_path">
+            <h1 class="project">PROJECT</h1>
+            <h2 class="lorum">Lorum</h2>
+            <div class="arrows">
+              <div class="arrow_left">
+                <a href="#"><img src="assets/images/arrow_left.png" alt="arrow_left" /></a>
+              </div>
+              <div class="arrow_right">
+                <a href="#"><img src="assets/images/arrow_right.png" alt="arrow_right" /></a>
+              </div>
+            </div>
+            <div class="slide_numbers">
+              <div class="slide_number_01">01</div>
+              <div class="slash">/</div>
+              <div class="slide_number_02">02</div>
+            </div>
+          </div>
+          <div class="button_view_project">
+            <div class="building_foto1">
+              <img src="assets/images/main_building_foto1.png" alt="building_foto1" />
+            </div>
+            <div class="button">
+              <a href="#"><img src="assets/images/button_view_project.png" alt="" /></a>
+            </div>
+          </div>
+        </section>
       </div>
     </section>
     <!-- our projects -->
