modify our projects section

--- a/index.html
+++ b/index.html
@@ -180,14 +180,16 @@
               src="assets/images/pictures/bridge.png"
               alt="bridge"
             />
-            <button class="our-projects__button" type="submit">
-              All projects
-            </button>
-            <img
-              class="our-projects__arrow-second"
-              src="assets/images/pictures/arrow.png"
-              alt="arrow"
-            />
+            <div class="container">
+              <button class="our-projects__button" type="submit">
+                All projects
+              </button>
+              <img
+                class="our-projects__arrow-second"
+                src="assets/images/pictures/arrow.png"
+                alt="arrow"
+              />
+            </div>
           </div>
         </div>
       </section>
