--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="button">
               <a href="#"
-                ><img src="assets/images/button_view_project.png" alt=""
+                ><img src="assets/images/button_view_project.png" alt="button"
               /></a>
             </div>
           </div>
