--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container">
         <section class="project-lorum">
           <div class="project-lorum__left_path">
-            <h1 class="project">PROJECT</h1>
+            <h1 class="project">Project</h1>
             <h2 class="lorum">Lorum</h2>
             <div class="arrows">
               <div class="arrow_left">
@@ -128,8 +128,8 @@
           <div class="main-focus__content main-focus__content_wrapper">
             <img
               class="main-focus__image main-focus__image_one"
-              src="assets/images/pictures/one.png"
-              alt="mission one"
+              src="assets/images/one.png"
+              alt="mission_one"
             />
             <p class="main-focus__content main-focus__content_primary-mission">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
@@ -137,8 +137,8 @@
             </p>
             <img
               class="main-focus__image main-focus__image_two"
-              src="assets/images/pictures/two.png"
-              alt="mission two"
+              src="assets/images/two.png"
+              alt="mission_two"
             />
             <p
               class="main-focus__content main-focus__content_secondary-mission"
@@ -157,7 +157,7 @@
           <div class="our-projects__gallery">
             <img
               class=".our-projects__image-rectangle"
-              src="assets/images/pictures/rectangle.png"
+              src="assets/images/rectangle.png"
               alt="rectangle-building"
             />
             <div>
@@ -165,22 +165,22 @@
               <a class="our-projects__view-more" href="#">View more</a>
               <img
                 class="our-projects__arrow-first"
-                src="assets/images/pictures/arrow.png"
+                src="assets/images/arrow.png"
                 alt="arrow"
               />
             </div>
-            <img src="assets/images/pictures/building.png" alt="building" /><img
+            <img src="assets/images/building.png" alt="building" /><img
               class="our-projects__image-roof"
-              src="assets/images/pictures/roof.png"
+              src="assets/images/roof.png"
               alt="roof"
             />
             <img
               class="our-projects__image-house"
-              src="assets/images/pictures/house.png"
+              src="assets/images/house.png"
               alt="house"
             /><img
               class="our-projects__image-bridge"
-              src="assets/images/pictures/bridge.png"
+              src="assets/images/bridge.png"
               alt="bridge"
             />
             <button class="our-projects__button" type="submit">
