--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </button>
             <img
               class="our-projects__arrow-second"
-              src="assets/images/pictures/arrow.png"
+              src="assets/images/arrow.png"
               alt="arrow"
             />
           </div>
