--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="assets/styles/normalize.css" />
   <link rel="stylesheet" href="assets/styles/style.css" />
-  <link rel="icon" href="assets/images/favicon-32x32.png" type="image/icon" />
+  <link rel="icon" href="assets/images/favicon-32x32.png" type="image/icon" >
   <title>Page of architects</title>
 </head>
 
-<body>
+<body class="body">
   <div class="container">
     <header class="header">
       <div>
-        <img src="assets/images/logo__header.png" class="header__logo" alt="logo_photo" />
+        <img src="assets/images/logo__header.png" class="header__logo" alt="logo_photo">
       </div>
       <nav class="nav">
         <div class="nav__main">
-          <a href="#main"><img src="assets/images/main_group.png" alt="main_group" /></a>
+          <a href="#main"><img src="assets/images/main_group.png" alt="main_group" ></a>
         </div>
         <div class="nav__gallery">
-          <a href="gallery_link" class="#gallery">gallery</a>
+          <a href="gallery_link">gallery</a>
         </div>
         <div class="nav__projects"><a href="#projects">projects</a></div>
         <div class="nav__certifications">
@@ -44,10 +44,10 @@
           <h2 class="lorum">Lorum</h2>
           <div class="arrows">
             <div class="arrow_left">
-              <a href="#"><img src="assets/images/arrow_left.png" alt="arrow_left" /></a>
+              <a href="#"><img src="assets/images/arrow_left.png" alt="arrow_left" ></a>
             </div>
             <div class="arrow_right">
-              <a href="#"><img src="assets/images/arrow_right.png" alt="arrow_right" /></a>
+              <a href="#"><img src="assets/images/arrow_right.png" alt="arrow_right" ></a>
             </div>
           </div>
           <div class="slide_numbers">
@@ -58,10 +58,10 @@
         </div>
         <div class="button_view_project">
           <div class="building_foto1">
-            <img src="assets/images/main_building_foto1.png" alt="building_foto1" />
+            <img src="assets/images/main_building_foto1.png" alt="building_foto1" >
           </div>
           <div class="button">
-            <a href="#"><img src="assets/images/button_view_project.png" alt="button" /></a>
+            <a href="#"><img src="assets/images/button_view_project.png" alt="button" ></a>
           </div>
         </div>
       </section>
@@ -69,9 +69,9 @@
     <!-- раздел, где about -->
     <div class="container">
       <section class="about">
-        <img src="assets/images/rectangle_1.png" class="rectangle_foto_1" alt="rectangle_foto_1" />
-        <img src="assets/images/rectangle_2.png" class="rectangle_foto_2" alt="rectangle_foto_2" />
-        <img src="assets/images/rectangle_3.png" class="rectangle_foto_3" alt="rectangle_foto_3" />
+        <img src="assets/images/rectangle_1.png" class="rectangle_foto_1" alt="rectangle_foto_1" >
+        <img src="assets/images/rectangle_2.png" class="rectangle_foto_2" alt="rectangle_foto_2" >
+        <img src="assets/images/rectangle_3.png" class="rectangle_foto_3" alt="rectangle_foto_3" >
         <div class="about_textarea">
           <h2 class="about_h2">About</h2>
           <p class="about_p">
@@ -83,7 +83,7 @@
             electronic typesetting, remaining essentially unchanged.
           </p>
           <div class="button_read_more">
-            <a href="#"><img src="assets/images/button_read_more.png" alt="button_read_more" /></a>
+            <a href="#"><img src="assets/images/button_read_more.png" alt="button_read_more" ></a>
           </div>
         </div>
       </section>
