--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               src="assets/images/rectangle.png"
               alt="rectangle-building"
             />
-            <div>
+            <div class="wrapper">
               <p class="our-projects__projects">Sample <br />project</p>
               <a class="our-projects__view-more" href="#">View more</a>
               <img
