--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
         </div>
         <nav class="nav">
           <div class="nav__main">
-            <a href="#main"
-              ><img src="assets/images/main_group.png" alt="main_group"
-            /></a>
+            <a href="#main" class="main_link">main</a>
           </div>
           <div class="nav__gallery">
-            <a href="gallery_link" class="#gallery">gallery</a>
+            <a href="#gallery" class="gallery_link">gallery</a>
           </div>
-          <div class="nav__projects"><a href="#projects">projects</a></div>
+          <div class="nav__projects">
+            <a href="#projects">projects</a></div>
           <div class="nav__certifications">
             <a href="#certifications">certifications</a>
           </div>
@@ -50,12 +49,12 @@
             <h1 class="project">Project</h1>
             <h2 class="lorum">Lorum</h2>
             <div class="arrows">
-              <div class="arrow_left">
+              <div class="arrows_left">
                 <a href="#"
                   ><img src="assets/images/arrow_left.png" alt="arrow_left"
                 /></a>
               </div>
-              <div class="arrow_right">
+              <div class="arrows_right">
                 <a href="#"
                   ><img src="assets/images/arrow_right.png" alt="arrow_right"
                 /></a>
